# Orgrim

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  color.h  gen_CMakeLists.txt.pl  main.c  main.h
align/: CMakeLists.txt  align.cpp
apple/: apple_pthread_barrier.h
backtrace/: backtrace.cpp
bitset/c/: CMakeLists.txt  bitset.h  test_binstring.c  test_bitset.c
callback/c++/: CMakeLists.txt  bind.cpp  bind_class.cpp  bind_simple.cpp
callback/c_c++/: CMakeLists.txt  example.c  example.cpp  example.h
callback/c_c++2/: CMakeLists.txt  c.c  c.h  cxx.cpp  cxx.h  main.c  main.cpp
cast/c++/: CMakeLists.txt  cast.cpp
checksum/c/: CMakeLists.txt  simple.c  tcp_checksum.c  test_values.h
clock/c/: CMakeLists.txt  clock_t.c  clock_t_macros.c
clock/c++/: CMakeLists.txt  chrono.cpp  chrono_macros.cpp  clock_t.cpp  system_clock.cpp  timeformat.cpp
cmake/Demo1/: CMakeLists.txt  main.cc
cmake/Demo2/: CMakeLists.txt  main.cc
cmake/Demo3/: CMakeLists.txt  main.cc
cmake/Demo3_1/: CMakeLists.txt
cmake/Demo3_1/math/: CMakeLists.txt  MathFunctions.cc
cmake/Demo4/: CMakeLists.txt  main.cc
cmake/Demo5/: CMakeLists.txt  main.cc
cmake/Demo7/: CMakeLists.txt  main.cc
cmake/Demo8/: CMakeLists.txt  config.h.in  main.cc
code_style/: .clang-format  TestClangFormat.cpp
common/: DateTime.cpp  DateTime.h  DebugUtil.h  Locker.h  PrintUtil.h  SysUtil.h  TimeUtil.h
compress/c/: CMakeLists.txt  zpipe.c
containers/: README.md  output_container.h
data_size/c++/: CMakeLists.txt  data_size.cpp  pack.h
datetime/c/: CMakeLists.txt  chinese_calendar.c  epoch.c  microsecond.cpp  strftime.c  strptime.c
datetime/c++/: CMakeLists.txt  strftime.cpp  system_clock.cpp
design_pattern/c++/singleton/: CMakeLists.txt  EagerSingleton.cpp  LazySingleton.cpp  LazySingleton1.cpp  LazySingleton2.cpp  LocalStaticSingleton.cpp  MeyersSingleton.cpp  PthreadOnceSingleton.cpp  README.md
directory/c/: CMakeLists.txt  get_filenames.c  scandir.c
encrypt/md5/c/: CMakeLists.txt  hmac_md5.c  md5_daemon.c  md5_sample1.c  md5_sample2.c
endian/c/: CMakeLists.txt  test_endian.c
exception/c++/: CMakeLists.txt  sample.cpp
file/c/: CMakeLists.txt  Makefile  proc_cmdline.c  proc_meminfo.c  proc_net_route.c  read_file_by_block.c  read_file_line_by_line.c  read_file_total.c  txt2bin.c
file/c++/: CMakeLists.txt  get_file_size.cpp  read_file_by_block.cpp  read_file_by_block2.cpp  read_file_line_by_line.cpp  read_file_to_string.cpp
file/c++/test_cases/: 1.txt
file_format/csv/c++/: CMakeLists.txt  calculate_barometer_with_standard.cpp  calculate_clean_duration.cpp  calculate_recharge_time_cost.cpp  csv.cpp  csv.h  test.cpp
file_format/json/cJSON/: CMakeLists.txt  cJSON.c  cJSON.h  cJSON_Duplicate.cpp  test1.cpp  test2.cpp  test2.json
gcc/c/: CMakeLists.txt  packed.c
ipc/semaphore/c/: CMakeLists.txt  IPC_PRIVATE.c  locker.h  posix_sem.c  system_v_sem.c
ipc/socket/c/: CMakeLists.txt  simple_client.c  simple_server.c  socket_client.c
ipc/socket/sendfile/: CMakeLists.txt  sendfile_client.c  sendfile_server.c
log/zlog/: CMakeLists.txt  a.conf  hello_dzlog.cpp  hello_zlog.cpp  sample.conf  test_helloworld.conf
logical_operation/: CMakeLists.txt  XOR.cpp  logical_operation.cpp
lua/c/: Makefile  (+11 more)
mactest/: CMakeLists.txt  MPToF.cpp  MPToF.h  TFCCtrl.h  ionbuffer.c  ionbuffer.h  main.cpp
math/c/: CMakeLists.txt  ceil.c  rand.c
performance/c/: CMakeLists.txt  test_for.c
serial/c/: CMakeLists.txt  Makefile  am_bigbuffer_sender.c  baud_test_receiver.c  baud_test_sender.c  clean_ready.c  debug_switch.c  dust_test.c  imu_test.c  map_recv_test.c  map_send_test.c  map_test.c  serial.h  serial_client.c  serial_server.c  serial_test.c  serial_test2.c  serial_test3.c  simple_read.c  simple_serial_receiver.c  simple_serial_sender.c  simple_write.c  upgrade_test.c
serial/c++/: CMakeLists.txt  TimeUtil.h  serial.h  simple_read.cpp  ttytest.c
serial/c++/imu_test2/: IMURequester.cpp  IMURequester.h  imu_test.cpp  serial.h
serial/c++/imu_test_polling/: CMakeLists.txt  IMURequester.cpp  IMURequester.h  TimeUtil.h  imu_test.cpp
serial/c++/imu_timeout_test/: IMURequester.cpp
serial/c++/sptof_recorder/: CMakeLists.txt  DebugUtil.h  IMURequester.cpp  IMURequester.h  Locker.h  PrintUtil.h  SPToF.cpp  SPToF.h  gp2ap01vt00f_api.c  gp2ap01vt00f_api.h  imu_test.cpp  serial.h
serial/c++/test_sweeper_baud/: CMakeLists.txt  McuComm.cpp  McuComm.h  McuProtocol.h  SerialPort.cpp  SerialPort.h  SysUtil.h  main.cpp  serial.cpp  serial.h
static/c/: CMakeLists.txt  local_static.c
string/c/: CMakeLists.txt  Makefile  convert_hexstring_to_buffer.c  convert_hexstring_to_buffer2.c  snprintf.c
template/c++/: CMakeLists.txt  class_template.cpp  function_template.cpp
test_memleak/gcc-asan/: CMakeLists.txt  global_buffer_overflow.cpp  heap_buffer_overflow.cpp  initialization_order_bug1.cpp  initialization_order_bug2.cpp  memory_leak.cpp  stack_buffer_overflow.cpp  stack_use_after_return.cpp  stack_use_after_scope.cpp  test_initialization_order_bug.sh  use_after_free.cpp
thread/: README.md
thread/c/: CMakeLists.txt  Makefile  hello.c  hello_joinable.c  hello_stack.c  hellothread.c  hellothread2.c  setstack.c  simple_threadpool.c  simple_threadpool_test.c  thread_cond.c  thread_mutex.c  thread_mutex_trylock.c  thread_once.c  thread_priority.c  thread_stacksize.c
thread/c++/: CMakeLists.txt  ctpl_example.cpp  ctpl_stl.h  hardware_concurrency.cpp  test_thread_join.cpp  thread.cpp  thread2.cpp  thread_detach.cpp  thread_swap.cpp
thread/c++/atomic/: atomic.cpp
thread/c++/barrier/: barrier.h  test_barrier.cpp
thread/c++/condition_variable/: condition_variable.cpp  condition_variable0.cpp  condition_variable2.cpp  condition_variable3.cpp
thread/c++/future/: get.cpp
thread/c++/mutex/: lock_guard.cpp  mutex.cpp  pthread_mutex_timedlock.cpp  recursive_mutex.cpp  recursive_timed_mutex.cpp  timed_mutex.cpp  try_lock_until.cpp  unique_lock.cpp  unique_lock2.cpp
thread/c++/practice/: producer_consumer_pthread.cpp  producer_consumer_std_thread.cpp
utils/: print_utils.h
(+297 files in other folders)
